# not-TitanFall3

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  imgui.ini  not TitanFall 3.sln  not TitanFall 3.vcxproj  not TitanFall 3.vcxproj.filters
Dependencies/: CMakeLists.txt
Dependencies/GLAD/: glad.h
Dependencies/Includes/GLAD/: glad.h
Dependencies/Includes/KHR/: khrplatform.h
Dependencies/libs/GLFW/: glfw3.lib
res/Models/Boat/: boat.mtl
res/Models/Grass/: grass.fbx
res/Models/House/: Exterior.gltf
res/Models/House/Exterior/: Exterior.gltf
res/Models/House/Interior/: Interior.gltf
res/Models/House/StarWarsClone/: untitled.gltf
res/Models/Player/Final/: Player.gltf  license.txt
res/Models/Player/Soldier/1/: scene.gltf
res/Models/Player/Soldier/1/dae/: nice.dae
res/Models/Player/Soldier/1/fbx/: nice.fbx
res/Models/Player/Soldier/gltf/: soldier1.gltf
res/Models/Player/Terrorist/: license.txt  scene.gltf
res/Models/Shapes/: Plane.gltf
res/Shaders/: skeletal.fs  skeletal.vs  skeletalPBR.fs
res/Shaders/Bulb/: Bulb.fs
res/Shaders/Bulb/bMoon/: bMoon.fs
res/Shaders/Compute/: raytracer.cs
res/Shaders/Depth/CSM/: dir_csm.gs
res/Shaders/Depth/Debug/: depthDebug.fs
res/Shaders/Depth/DebugCascade/: debug_cascade.fs
res/Shaders/Depth/PointDepth/: pointDepth.fs  pointDepth.gs
res/Shaders/Depth/Terrain/: terrainD.fs  terrainD.tcs  terrainD.tes  terrainD.vs
res/Shaders/Grass/: Grass.fs  Grass.vs
res/Shaders/HDR/: hdr.fs
res/Shaders/IBL/: brdf.fs  brdf.vs  irradiance_convolution.fs  prefilter.fs
res/Shaders/Post Processing/HDR/: hdr.fs
res/Shaders/Sea/: sea.fs  sea.vs
res/Shaders/Skybox/: skyBox.vs  skybox.fs
res/Shaders/Standard/Cubemaps/: a.fs  a.gs  a.vs  b.vs  cubemap_capture.gs  cubemap_capture.vs  equiToCubemap.fs
res/Shaders/Standard/PBR/: PBR.fs
res/Shaders/Standard/Unlit/: Unlit.fs  Unlit.vs
res/Shaders/Standard/Unlit/PBR/: PBR.fs
res/Shaders/Terrain/: terrain.fs  terrain.tcs  terrain.tes  terrain.vs
res/Shaders/VolumetricFog/: VolumetricFog.fs
src/: Animation.h  Animator.h  App.cpp  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityM.cpp  EntityM.h  EntityTerrain.cpp  EntityTerrain.h  EntityV.cpp  EntityV.h  Game.cpp  Game.h  GameEntity.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Player.cpp  Player.h  RandomHelpers.cpp  RandomHelpers.h  ReflectionProbe.cpp  ReflectionProbe.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowManager.cpp  ShadowManager.h  Shape.cpp  Shape.h  SkyBox.cpp  (+13 more)
